<resources>
    <string name="app_name">MarketStockApp</string>
    <string name="sell">sell</string>
    <string name="buy">buy</string>
    <string name="aapl">AAPL</string>
    <string name="amzn">AMZN</string>
    <string name="googl">GOOGL</string>
    <string name="tsla">TSLA</string>
    <string name="information">Information</string>
    <string name="market_stock_app">Market Stock App</string>
    <string name="write_the_amount_please">Write The Amount Please</string>
    <string name="amount">amount?</string>
    <string name="TeslaInfo">Tesla, is an American electric vehicle and clean energy company based in Palo Alto, California.
Tesla\'s current products include electric cars, battery energy storage from home to grid scale, solar panels and solar roof tiles, as well as other related products and services.
Founded in July 2003 as Tesla Motors, the company\'s name is a tribute to inventor and electrical engineer Nikola Tesla, Elon Musk, who contributed most of the funding in the early days, has served as CEO since 2008.
According to Musk, the purpose of Tesla is to help expedite the move to sustainable transport and energy, obtained through electric vehicles and solar power.
</string>
</resources>